# netgraph

./: .gitignore  .readthedocs.yaml  README.md  TODO  netgraph.py  optional-requirements.txt  paper.bib  pyproject.toml  requirements.txt  setup.py
animations/: README.rst  plot_01_dynamic_network.py  plot_01_mwe_animation.py  plot_02_animate_edges.py  plot_03_animate_nodes.py
docs/: requirements.txt
examples/: README.rst  plot_01_default.py  plot_02_directed_network.py  plot_03_weighted.py  plot_04_weighted.py  plot_05_node_and_edge_artist_customisation.py  plot_06_highlight_paths.py  plot_06_labels.py  plot_07_custom_layout.py  plot_08_dot_layout.py  plot_08_legends.py  plot_09_circular_layout.py  plot_10_community_layout.py  plot_12_multicomponent_graphs.py  plot_13_arcdiagram.py  plot_13_geometric_layout.py  plot_15_curved_edge_layout.py  plot_15_highlight_paths.py  plot_19_hyperlinks.py  plot_20_geometric_layout.py  plot_21_flowchart.py  plot_23_pyqt.py  plot_default.py  plot_directed_network.py  plot_weighted.py
netgraph/: __init__.py  _arcdiagram.py  _arcdiagram_classes.py  _artists.py  _data_io.py  _deprecated.py  _edge_layout.py  _graph_classes.py  _interactive_arcdiagram_classes.py  _interactive_graph_classes.py  _interactive_multigraph_classes.py  _interactive_variants.py  _layout.py  _line_supercover.py  _main.py  _multigraph.py  _multigraph_classes.py  _named.py  _node_layout.py  _parser.py  _utils.py  gallery.py
publication/: advanced_example.py  basic_example.py  paper.bib  paper.md
tests/: test_arcdiagram.py  test_arcdiagram_classes.py  (+12 more)
(+169 files in other folders)
